--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
-name = "str_ext"
+name = "tokenizer"
 version = "0.1.0"
 authors = ["Nattapong Sirilappanich <nattapong.sirilappanich2@ibm.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default=["multi-thread"]
+single-thread=[]
+multi-thread=["rayon"]
 
 [dependencies]
+rayon = {version="^1.3", optional=true}
 
 [dev-dependencies]
 permutator = "^0.4"
