Update cargo.toml for publishing crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "tokenizer"
+description = "Thai text tokenizer"
+keywords = ["Thai", "tokenizer", "text", "word", "tokeniser"]
+categories = ["internationalization", "localization"]
+readme = "README.md"
+license = "BSD-3-Clause"
 version = "0.1.1"
-authors = ["Nattapong Sirilappanich <nattapong.sirilappanich2@ibm.com>"]
+authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
